# jwt-authenticator

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  makefile
src/: main.cpp
